k8s/demo-app-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata: 
  name: demo-app-deployment
  labels:
    app: spring-boot-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-boot-demo
  template:
    metadata:
      labels:
        app: spring-boot-demo
    spec:
      containers:
      - name: demo-app
        image: 931604932544.dkr.ecr.us-east-2.amazonaws.com/demo:v14
        imagePullPolicy: Always
        ports:
        - containerPort: 8085
---
kind: Service
apiVersion: v1
metadata:
  name: demo-app-service
spec:
  selector:
    app: spring-boot-demo
  ports:
  - protocol: TCP
    port: 8085
    targetPort: 8085
  type: NodePort
